--- a/ios-clientes/Base.lproj/Main.storyboard
+++ b/ios-clientes/Base.lproj/Main.storyboard
@@ -373,6 +373,9 @@
                                                     <state key="highlighted">
                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <connections>
+                                                        <action selector="llamar:" destination="Zov-gN-OkM" eventType="touchUpInside" id="Xu4-eY-hiC"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -727,82 +730,6 @@
         <image name="sucursalesIcon" width="32" height="32"/>
         <image name="telefonoIcon" width="32" height="32"/>
     </resources>
-    <classes>
-        <class className="BVEditarPerfilViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BVEditarPerfilViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="hideKeyboard"/>
-                <relationship kind="outlet" name="cellValor" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="labelParametro" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="textFieldValor" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="BVLoginViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BVLoginViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="buttonEntrar:"/>
-                <relationship kind="action" name="hideOneKeyboard:"/>
-                <relationship kind="outlet" name="activeField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="entrar" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="loading" candidateClass="UIActivityIndicatorView"/>
-                <relationship kind="outlet" name="password" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="scrollViewContenedor" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="usuario" candidateClass="BVRutTextField"/>
-            </relationships>
-        </class>
-        <class className="BVPerfilViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BVPerfilViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="unwindToViewControllerProductosCancelar:" candidateClass="UIStoryboardSegue"/>
-                <relationship kind="action" name="unwindToViewControllerProductosGuardar:" candidateClass="UIStoryboardSegue"/>
-                <relationship kind="outlet" name="cellApellido" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellCelular" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellComuna" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellDireccion" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellEmail" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellNombre" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellRut" candidateClass="UITableViewCell"/>
-            </relationships>
-        </class>
-        <class className="BVProductosViewController" superclassName="CoreDataTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BVProductosViewController.h"/>
-        </class>
-        <class className="BVRutTextField" superclassName="UITextField">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BVRutTextField.h"/>
-            <relationships>
-                <relationship kind="action" name="editBegin:"/>
-                <relationship kind="action" name="editChangeEnd:"/>
-                <relationship kind="action" name="editDidEnd:"/>
-            </relationships>
-        </class>
-        <class className="BVSucursalInfoViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BVSucursalInfoViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="cellDireccion" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellEncargado" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellFax" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellHorarioA" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellHorarioB" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellRegion" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellTelefono" candidateClass="UITableViewCell"/>
-            </relationships>
-        </class>
-        <class className="BVSucursalesViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BVSucursalesViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="mapa" candidateClass="MKMapView"/>
-            </relationships>
-        </class>
-        <class className="CoreDataTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CoreDataTableViewController.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="UIStoryboardSegue" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
