--- a/ios-clientes/Base.lproj/Main.storyboard
+++ b/ios-clientes/Base.lproj/Main.storyboard
@@ -540,11 +540,11 @@
         <!--Editar Perfil View Controller-->
         <scene sceneID="IZl-F9-XYF">
             <objects>
-                <tableViewController id="m1W-EL-s73" customClass="BVEditarPerfilViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" dataMode="static" style="plain" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="418-nn-azh">
+                <tableViewController extendedLayoutIncludesOpaqueBars="YES" id="m1W-EL-s73" customClass="BVEditarPerfilViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" dataMode="static" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="418-nn-azh">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.96862751245498657" green="0.96862751245498657" blue="0.96862751245498657" alpha="1" colorSpace="deviceRGB"/>
                         <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="BiY-5w-bDb">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -599,7 +599,7 @@
                             <outlet property="delegate" destination="m1W-EL-s73" id="qyB-Yq-EKg"/>
                         </connections>
                     </tableView>
-                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <nil key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="cellValor" destination="iDq-II-cRh" id="Kjb-93-dSw"/>
                         <outlet property="labelParametro" destination="Jyi-NI-dBC" id="ePO-1E-edh"/>
